# final_year_project

./: CMakeLists.txt  Makefile  README.md  setup.py
DuckDB/: DuckDBtest.py  DuckDBtestmutations.py  distribExpr.ipynb  expressionFuzzer.ipynb  verifyDistrib.ipynb
DuckDB/queries/batch1/: 00-10.txt  10-20.txt  20-30.txt  30-40.txt  40-50.txt  50-60.txt  60-70.txt  70-80.txt  80-90.txt  90-100.txt  README.md
DuckDB/queries/batch1/temp/: 00-10.txt  10-20.txt  20-30.txt  30-40.txt  40-50.txt  50-60.txt  60-70.txt  70-80.txt  80-90.txt  90-100.txt
DuckDB/queries/batch2/: 00-10.txt  10-20.txt  20-30.txt  30-40.txt  40-50.txt  50-60.txt  60-70.txt  70-80.txt  80-90.txt  90-100.txt  README.md
DuckDB/queries/batch2/temp/: 00-10.txt  10-20.txt  20-30.txt  30-40.txt  40-50.txt  50-60.txt  60-70.txt  70-80.txt  80-90.txt  90-100.txt
DuckDB/queries/batch3/: 00-10.txt  30-40.txt  40-50.txt  50-60.txt  60-70.txt  70-80.txt  80-90.txt  90-100.txt
DuckDB/queries/batch3/temp/: 10-20.txt  20-30.txt  90-100.txt
adult/: discrete.csv  output.txt  pyvelox_mutation_test.txt  queries_100.txt  queries_1000.txt  queries_10000.txt
adult/data/: discrete0.0.csv  discrete0.1.csv  discrete0.2.csv  discrete0.3.csv  discrete0.4.csv  discrete0.5.csv  discrete0.6.csv  discrete0.7.csv  discrete0.8.csv  discrete0.9.csv  discrete1.5.csv  discrete2.csv
pyvelox/: CMakeLists.txt  README.md  pyvelox.cpp  pyvelox.h  version.py
pyvelox/test/: demo.ipynb  project_interface_usage.py  project_mutation_test.py
scripts/: setup-helper-functions.sh  setup-ubuntu.sh
velox/core/: Expressions.h  ITypedExpr.h
velox/exec/: Task.h
velox/exec/tests/: CMakeLists.txt
velox/exec/tests/projectExperiments/: CMakeLists.txt  ProjectCompilationTimesExperiment.cpp  ProjectHardcodedQueriesExperiment.cpp  ProjectPlanArchitectureExperiment.cpp  ProjectQueryModifExperiment.cpp
velox/exec/tests/projectExperiments/vtuneArchitectures/: BatchedQueries.cpp  CMakeLists.txt  Filter.cpp  FilterProj.cpp  PartitionField.cpp  PartitionRoundRobin.cpp  PrePartitionData.cpp
velox/exec/tests/utils/: AssertQueryBuilder.cpp  AssertQueryBuilder.h  CMakeLists.txt  PlanBuilder.cpp  PlanBuilder.h  ProjectModifyExpressionUtils.cpp  ProjectModifyExpressionUtils.h
